refactor: Remove unused import statements
Remove unused import statements in several Java files to improve code cleanliness and maintainability.