@@ -4,24 +4,24 @@ import com.cortex.backend.common.SlugUtils;
 import com.cortex.backend.education.course.api.CourseService;
 import com.cortex.backend.education.course.api.dto.CourseRequest;
 import com.cortex.backend.education.course.api.dto.CourseResponse;
+import com.cortex.backend.education.course.api.dto.CourseUpdateRequest;
 import com.cortex.backend.education.course.domain.Course;
 import com.cortex.backend.education.domain.Tag;
 import com.cortex.backend.education.internal.TagRepository;
 import com.cortex.backend.media.api.MediaService;
 import com.cortex.backend.media.domain.Media;
 import jakarta.persistence.EntityNotFoundException;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
-
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @Slf4j
@@ -34,12 +34,15 @@ public class CourseServiceImpl implements CourseService {
   private final SlugUtils slugUtils;
   private final TagRepository tagRepository;
 
+  private static final String COURSE_IMAGE_UPLOAD_PATH = "courses";
+  private static final String COURSE_NOT_FOUND_MESSAGE = "Course not found";
+
   @Override
   @Transactional(readOnly = true)
   public List<CourseResponse> getAllCourses() {
     return StreamSupport.stream(courseRepository.findAll().spliterator(), false)
         .map(courseMapper::toCourseResponse)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -58,33 +61,29 @@ public class CourseServiceImpl implements CourseService {
 
   @Override
   @Transactional
-  public CourseResponse createCourse(CourseRequest request, MultipartFile image) throws IOException {
+  public CourseResponse createCourse(CourseRequest request) {
     Course course = courseMapper.toCourse(request);
     course.setSlug(generateUniqueSlug(request.getName()));
     setCourseRelations(course, request);
-    handleImageUpload(course, image, request.getImageAltText());
     Course savedCourse = courseRepository.save(course);
     return courseMapper.toCourseResponse(savedCourse);
   }
 
   @Override
   @Transactional
-  public CourseResponse updateCourse(Long id, CourseRequest request, MultipartFile image) throws IOException {
+  public CourseResponse updateCourse(Long id, CourseUpdateRequest request) {
     Course existingCourse = courseRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException("Course not found"));
+        .orElseThrow(() -> new EntityNotFoundException(COURSE_NOT_FOUND_MESSAGE));
 
     if (request.getName() != null) {
       existingCourse.setName(request.getName());
-      if (!existingCourse.getName().equals(request.getName())) {
-        existingCourse.setSlug(generateUniqueSlug(request.getName(), existingCourse.getSlug()));
-      }
+      existingCourse.setSlug(generateUniqueSlug(request.getName(), existingCourse.getSlug()));
     }
     if (request.getDescription() != null) {
       existingCourse.setDescription(request.getDescription());
     }
 
     setCourseRelations(existingCourse, request);
-    handleImageUpload(existingCourse, image, request.getImageAltText());
     Course updatedCourse = courseRepository.save(existingCourse);
     return courseMapper.toCourseResponse(updatedCourse);
   }
@@ -93,12 +92,13 @@ public class CourseServiceImpl implements CourseService {
   @Transactional
   public void deleteCourse(Long id) {
     Course course = courseRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException("Course not found"));
+        .orElseThrow(() -> new EntityNotFoundException(COURSE_NOT_FOUND_MESSAGE));
     courseRepository.delete(course);
   }
 
   private String generateUniqueSlug(String name) {
-    return slugUtils.generateUniqueSlug(name, slug -> courseRepository.findBySlug(slug).isPresent());
+    return slugUtils.generateUniqueSlug(name,
+        slug -> courseRepository.findBySlug(slug).isPresent());
   }
 
   private String generateUniqueSlug(String name, String currentSlug) {
@@ -110,6 +110,10 @@ public class CourseServiceImpl implements CourseService {
     setCourseTags(course, request.getTagIds());
   }
 
+  private void setCourseRelations(Course course, CourseUpdateRequest request) {
+    setCourseTags(course, request.getTagIds());
+  }
+
   private void setCourseTags(Course course, Set<Long> tagIds) {
     if (tagIds != null) {
       Set<Tag> tags = StreamSupport.stream(tagRepository.findAllById(tagIds).spliterator(), false)
@@ -118,10 +122,26 @@ public class CourseServiceImpl implements CourseService {
     }
   }
 
-  private void handleImageUpload(Course course, MultipartFile image, String altText) throws IOException {
+  private void handleImageUpload(Course course, MultipartFile image, String altText)
+      throws IOException {
     if (image != null && !image.isEmpty()) {
-      Media uploadedMedia = mediaService.uploadMedia(image, altText, "courses", course.getSlug());
+      Media uploadedMedia = mediaService.uploadMedia(image, altText, COURSE_IMAGE_UPLOAD_PATH,
+          course.getSlug());
       course.setImage(uploadedMedia);
     }
   }
+
+  @Override
+  @Transactional
+  public CourseResponse uploadCourseImage(Long id, MultipartFile image, String altText)
+      throws IOException {
+    Course course = courseRepository.findById(id)
+        .orElseThrow(() -> new EntityNotFoundException(COURSE_NOT_FOUND_MESSAGE));
+
+    handleImageUpload(course, image, altText);
+    Course updateCourse = courseRepository.save(course);
+    return courseMapper.toCourseResponse(updateCourse);
+  }
+
+
 }
