@@ -6,6 +6,7 @@ import com.cortex.backend.education.course.internal.CourseRepository;
 import com.cortex.backend.education.module.api.ModuleService;
 import com.cortex.backend.education.module.api.dto.ModuleRequest;
 import com.cortex.backend.education.module.api.dto.ModuleResponse;
+import com.cortex.backend.education.module.api.dto.ModuleUpdateRequest;
 import com.cortex.backend.education.module.domain.ModuleEntity;
 import com.cortex.backend.media.api.MediaService;
 import com.cortex.backend.media.domain.Media;
@@ -13,7 +14,6 @@ import jakarta.persistence.EntityNotFoundException;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -32,12 +32,15 @@ public class ModuleServiceImpl implements ModuleService {
   private final MediaService mediaService;
   private final SlugUtils slugUtils;
 
+  private static final String MODULE_NOT_FOUND_MESSAGE = "Module not found";
+  private static final String MODULE_IMAGE_UPLOAD_PATH = "modules";
+
   @Override
   @Transactional(readOnly = true)
   public List<ModuleResponse> getAllModules() {
     return StreamSupport.stream(moduleRepository.findAll().spliterator(), false)
         .map(moduleMapper::toModuleResponse)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -56,14 +59,12 @@ public class ModuleServiceImpl implements ModuleService {
 
   @Override
   @Transactional
-  public ModuleResponse createModule(ModuleRequest request, MultipartFile image) throws IOException {
+  public ModuleResponse createModule(ModuleRequest request) {
     ModuleEntity module = new ModuleEntity();
     module.setName(request.getName());
     module.setDescription(request.getDescription());
     module.setSlug(generateUniqueSlug(request.getName()));
     setCourse(module, request.getCourseId());
-
-    handleImageUpload(module, image, request.getImageAltText());
 
     ModuleEntity savedModule = moduleRepository.save(module);
     return moduleMapper.toModuleResponse(savedModule);
@@ -71,15 +72,13 @@ public class ModuleServiceImpl implements ModuleService {
 
   @Override
   @Transactional
-  public ModuleResponse updateModule(Long id, ModuleRequest request, MultipartFile image) throws IOException {
+  public ModuleResponse updateModule(Long id, ModuleUpdateRequest request) {
     ModuleEntity existingModule = moduleRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException("Module not found"));
+        .orElseThrow(() -> new EntityNotFoundException(MODULE_NOT_FOUND_MESSAGE));
 
     if (request.getName() != null) {
       existingModule.setName(request.getName());
-      if (!existingModule.getName().equals(request.getName())) {
-        existingModule.setSlug(generateUniqueSlug(request.getName(), existingModule.getSlug()));
-      }
+      existingModule.setSlug(generateUniqueSlug(request.getName(), existingModule.getSlug()));
     }
     if (request.getDescription() != null) {
       existingModule.setDescription(request.getDescription());
@@ -88,9 +87,18 @@ public class ModuleServiceImpl implements ModuleService {
       setCourse(existingModule, request.getCourseId());
     }
 
-    handleImageUpload(existingModule, image, request.getImageAltText());
-
     ModuleEntity updatedModule = moduleRepository.save(existingModule);
+    return moduleMapper.toModuleResponse(updatedModule);
+  }
+
+  @Override
+  @Transactional
+  public ModuleResponse uploadModuleImage(Long id, MultipartFile image, String altText)
+      throws IOException {
+    ModuleEntity module = moduleRepository.findById(id)
+        .orElseThrow(() -> new EntityNotFoundException(MODULE_NOT_FOUND_MESSAGE));
+    handleImageUpload(module, image, altText);
+    ModuleEntity updatedModule = moduleRepository.save(module);
     return moduleMapper.toModuleResponse(updatedModule);
   }
 
@@ -98,28 +106,31 @@ public class ModuleServiceImpl implements ModuleService {
   @Transactional
   public void deleteModule(Long id) {
     ModuleEntity module = moduleRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException("Module not found"));
+        .orElseThrow(() -> new EntityNotFoundException(MODULE_NOT_FOUND_MESSAGE));
     moduleRepository.delete(module);
   }
 
   private String generateUniqueSlug(String name) {
-    return slugUtils.generateUniqueSlug(name, slug -> moduleRepository.findBySlug(slug).isPresent());
+    return slugUtils.generateUniqueSlug(name,
+        slug -> moduleRepository.findBySlug(slug).isPresent());
   }
 
   private String generateUniqueSlug(String name, String currentSlug) {
     return slugUtils.generateUniqueSlug(name,
         slug -> !slug.equals(currentSlug) && moduleRepository.findBySlug(slug).isPresent());
   }
-  
+
   private void setCourse(ModuleEntity module, Long courseId) {
     Course course = courseRepository.findById(courseId)
         .orElseThrow(() -> new EntityNotFoundException("Course not found"));
     module.setCourse(course);
   }
 
-  private void handleImageUpload(ModuleEntity module, MultipartFile image, String altText) throws IOException {
+  private void handleImageUpload(ModuleEntity module, MultipartFile image, String altText)
+      throws IOException {
     if (image != null && !image.isEmpty()) {
-      Media uploadedMedia = mediaService.uploadMedia(image, altText, "modules", module.getSlug());
+      Media uploadedMedia = mediaService.uploadMedia(image, altText, MODULE_IMAGE_UPLOAD_PATH,
+          module.getSlug());
       module.setImage(uploadedMedia);
     }
   }
